--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="description" content="Piano qui reproduit les personnages et lieux
 emblématiques de Springfield de façon abstraite.">
     <script type="text/javascript" src="lib/phaser.js"></script>
-    <script type="text/javascript" src="Tableau1.js"></script>
-    <script type="text/javascript" src="main1.js"></script>
-    <link rel="stylesheet" href="main.css">
+    <script type="text/javascript" src="src/Tableau.js"></script>
+    <script type="text/javascript" src="src/main.js"></script>
+    <link rel="stylesheet" href="src/styles.css">
 </head>
 <body>
 
