--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>ALLEMAN Quentin - New Springfield</title>
-    <meta name="description" content="Piano qui reproduit les personnages et lieux
-emblématiques de Springfield de façon abstraite.">
+    <title>ALLEMAN Quentin - Pong</title>
+    <meta name="description" content="Pong">
     <script type="text/javascript" src="lib/phaser.js"></script>
     <script type="text/javascript" src="src/Tableau.js"></script>
     <script type="text/javascript" src="src/main.js"></script>
@@ -12,7 +11,7 @@ emblématiques de Springfield de façon abstraite.">
 </head>
 <body>
 
-<h1>New Springfield</h1>
+<h1>Pong</h1>
 <div id="game"></div>
 <a href="https://naomi80.github.io/PianoGraphique/">
     Lien vers le Piano Graphique de Morville Naomi
