--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 <h1>Pong</h1>
 <div id="game"></div>
-<a href="https://naomi80.github.io/PianoGraphique/">
-    Lien vers le Piano Graphique de Morville Naomi
+<a href="https://naomi80.github.io/PONG/">
+    Lien vers le Pong de Morville Naomi
 </a>
 </body>
 </html>
