--- a/index.html
+++ b/index.html
@@ -7,12 +7,23 @@
     <script type="text/javascript" src="lib/phaser.js"></script>
     <script type="text/javascript" src="src/Tableau.js"></script>
     <script type="text/javascript" src="src/main.js"></script>
+    <script type="text/javascript" src="src/Joueur.js"></script>
     <link rel="stylesheet" href="src/styles.css">
 </head>
 <body>
 
 <h1>Pong</h1>
 <div id="game"></div>
+<div id="scores">
+    <div id ="joueurGauche">
+        <div class="name">...</div>
+        <div class="score">...</div>
+    </div>
+    <div id ="joueurDroite">
+        <div class="name">...</div>
+        <div class="score">...</div>
+    </div>
+</div>
 <a href="https://naomi80.github.io/PONG/">
     Lien vers le Pong de Morville Naomi
 </a>
