--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 <div id="game"></div>
 <div id="scores">
     <div id ="joueurGauche">
-        <div class="name">...</div>
-        <div class="score">...</div>
+        <div id="joueur1" class="name">...</div>
+        <div id="scores1" class="score">...</div>
     </div>
     <div id ="joueurDroite">
-        <div class="name">...</div>
-        <div class="score">...</div>
+        <div id="joueur2" class="name">...</div>
+        <div id="scores2" class="score">...</div>
     </div>
 </div>
 <a href="https://naomi80.github.io/PONG/">
